# easy-experiments

./: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  easy-experiments.db-shm  easy-experiments.db-wal
.github/workflows/: ci.yml  docker-publish.yml
landing/: .dockerignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
landing/public/: robots.txt
landing/src/: config.ts
landing/src/components/: Footer.astro  Hero.astro
landing/src/layouts/: Base.astro  Docs.astro
landing/src/pages/: index.astro
landing/src/pages/docs/: create-experiment.md  events.md  index.md  results.md
landing/src/styles/: global.css
loadtest/: README.md  script.js
migrations/: 20260420000001_create_experiments_table.sql  20260421000001_init.sql  20260424000001_api_keys.sql  20260507000001_api_keys_unique_name.sql
migrations/duckdb/: 0001_init.sql
src/: config.rs  errors.rs  lib.rs  main.rs  startup.rs  validation.rs
src/analytics/: event.rs  mod.rs  sink.rs  writer.rs
src/enums/: experiment_status.rs  mod.rs
src/models/: analytics.rs  api_key.rs  auth.rs  db.rs  domain.rs  evaluate.rs  experiment_status.rs  exposure.rs  metric.rs  mod.rs  query.rs  request.rs  response.rs  track.rs  user.rs
src/models/experiment/: db.rs  domain.rs  mod.rs  request.rs  response.rs  status.rs  validation.rs
src/repository/: duckdb.rs  mod.rs
src/repository/db/: api_keys.rs  experiments.rs  mod.rs  users.rs
src/routes/: config_js.rs  mod.rs
src/routes/api_keys/: create.rs  list.rs  mod.rs  revoke.rs
src/routes/auth/: accept_invite.rs  login.rs  login_password.rs  mod.rs  validate_token.rs
src/routes/evaluate/: evaluate.rs  mod.rs
src/routes/experiments/: create.rs  delete.rs  get.rs  mod.rs  results.rs  update.rs
src/routes/track/: mod.rs  track.rs
src/routes/users/: invite.rs  list.rs  mod.rs  remove.rs
src/services/: api_key.rs  auth.rs  evaluation.rs  experiment.rs  exposure.rs  funny_names.rs  google_auth.rs  jwt.rs  metric_sink.rs  mod.rs  password.rs  password_auth.rs  user.rs
src/services/analytics/: mod.rs  pool.rs  queries.rs  results.rs  stats.rs
tests/: api_keys.rs  auth.rs  evaluate.rs  experiments.rs  experiments_crud.rs  users.rs
tests/api_keys/: create.rs  list.rs  mod.rs  revoke.rs
tests/auth/: accept_invite.rs  mod.rs  password_login.rs
tests/common/: mod.rs
tests/experiments/: create.rs  delete.rs  get.rs  list.rs  mod.rs  results.rs  start_stop.rs  update.rs
tests/users/: invite.rs  list.rs  login_claim.rs  mod.rs  remove.rs
ui/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  vite-env.d.ts
ui/src/api/: apiKeys.ts  auth.ts  client.ts  experiments.ts  index.ts  types.ts  users.ts
ui/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
ui/src/components/: Badge.tsx  Button.tsx  Dialog.tsx  EmptyState.tsx  ErrorAlert.tsx  Input.tsx  Layout.tsx  Logo.tsx  PageHeader.tsx  SegmentedControl.tsx  Spinner.tsx
ui/src/components/results/: ConversionChart.tsx  DateRangePicker.tsx  HeroKPI.tsx  SignificanceBadge.tsx  SrmBanner.tsx  TimeSeriesChart.tsx  VariantStatCard.tsx  VariantsTable.tsx  Verdict.tsx
ui/src/forms/: ExperimentForm.tsx  experimentSchema.ts
ui/src/lib/: format.ts  runtimeConfig.ts  variantColors.ts
ui/src/pages/: AcceptInvitePage.tsx  ApiKeysPage.tsx  ExperimentCreatePage.tsx  ExperimentDetailPage.tsx  ExperimentEditPage.tsx  ExperimentResultsPage.tsx  ExperimentsListPage.tsx  GuidePage.tsx  LoginPage.tsx  TeamPage.tsx
(+5 files in other folders)
