[package]
name = "easy-experiments"
version = "0.1.0"
authors = ["Mark Antipin <mr.antipin@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "easy-experiments"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.216", features = ["derive", "rc"] }
config = "0.14"
dotenv = "0.15.0"
serde_json = "1.0.134"
derive_more = "0.99.18"
actix-cors = "0.7.0"
actix-files = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-actix-web = "0.7"
tracing-log = "0.2"
chrono = "0.4.39"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
duckdb = { version = "1.2", features = ["bundled"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9.2"
sha2 = "0.10"
base64 = "0.22"
moka = { version = "0.12", features = ["future", "sync"] }
statrs = "0.18"
num_cpus = "1.16"
argon2 = "0.5"

[dev-dependencies]
rsa = "0.9"
wiremock = "0.6"

[profile.release]
panic = "abort"
strip = true
