[package]
name = "easy-experiments"
version = "0.1.0"
authors = ["Mark Antipin <mr.antipin@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "easy-experiments"

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
serde = { version = "1.0.216", features = ["derive", "rc"] }
dotenvy = "0.15"
serde_json = "1.0.134"
actix-cors = "0.7.0"
actix-files = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-actix-web = "0.7"
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
duckdb = { version = "1.2", features = ["bundled"] }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
jsonwebtoken = "9"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.9.2"
sha2 = "0.10"
base64 = "0.22"
moka = { version = "0.12", features = ["future", "sync"] }
statrs = { version = "0.18", default-features = false }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["getrandom"] }

[dev-dependencies]
rsa = "0.9"
wiremock = "0.6"

[profile.release]
panic = "abort"
strip = true
